feat(books): wrapping up of api
