# src/db/schema.ts
@@ -6,6 +6,7 @@ import {
   varchar,
   text,
   timestamp,
+  index,
 } from 'drizzle-orm/pg-core';
 
 export const users = table('users', {
@@ -17,14 +18,22 @@ export const users = table('users', {
   updatedAt: timestamp('updated_at').notNull().defaultNow(),
 });
 
-export const books = table('books', {
-  id: integer().primaryKey().generatedAlwaysAsIdentity(),
-  authorId: integer('author_id'),
-  title: varchar({ length: 255 }).notNull(),
-  info: text('info'),
-  createdAt: timestamp('created_at').notNull().defaultNow(),
-  updatedAt: timestamp('updated_at').notNull().defaultNow(),
-});
+export const books = table(
+  'books',
+  {
+    id: integer().primaryKey().generatedAlwaysAsIdentity(),
+    authorId: integer('author_id'),
+    title: varchar({ length: 255 }).notNull(),
+    info: text('info'),
+    createdAt: timestamp('created_at').notNull().defaultNow(),
+    updatedAt: timestamp('updated_at').notNull().defaultNow(),
+  },
+  (t) => {
+    return {
+      titleIdx: index('title_idx').on(t.title),
+    };
+  },
+);
 
 export const genres = table('genres', {
   id: integer().primaryKey().generatedAlwaysAsIdentity(),
@@ -34,23 +43,31 @@ export const genres = table('genres', {
   updatedAt: timestamp('updated_at').notNull().defaultNow(),
 });
 
-export const authors = table('authors', {
-  id: integer().primaryKey().generatedAlwaysAsIdentity(),
-  name: varchar({ length: 255 }).notNull(),
-  bio: text('bio'),
-  createdAt: timestamp('created_at').notNull().defaultNow(),
-  updatedAt: timestamp('updated_at').notNull().defaultNow(),
-});
+export const authors = table(
+  'authors',
+  {
+    id: integer().primaryKey().generatedAlwaysAsIdentity(),
+    name: varchar({ length: 255 }).notNull(),
+    bio: text('bio'),
+    createdAt: timestamp('created_at').notNull().defaultNow(),
+    updatedAt: timestamp('updated_at').notNull().defaultNow(),
+  },
+  (t) => {
+    return {
+      nameIdx: index('name_idx').on(t.name),
+    };
+  },
+);
 
 export const booksGenresPivot = table(
   'book_genre',
   {
     bookId: integer('book_id')
       .notNull()
-      .references(() => books.id),
+      .references(() => books.id, { onDelete: 'cascade' }),
     genreId: integer('genre_id')
       .notNull()
-      .references(() => genres.id),
+      .references(() => genres.id, { onDelete: 'cascade' }),
   },
   (t) => ({
     pk: primaryKey({ columns: [t.bookId, t.genreId] }),
