# src/routes/books.ts
@@ -1,91 +1,52 @@
-import { books as table } from '@/db/schema.js';
-import { BookDto } from '@/dtos/book.js';
-import { FastifyTypebox, SortOrder } from '@/types/index.js';
-import { Type } from '@sinclair/typebox';
-import { plainToInstance } from 'class-transformer';
-import { asc, desc, lt, gt, or, eq, and } from 'drizzle-orm';
+import * as handlers from '@/routes/handlers/books/index.js';
+import {
+  CreateBookFormSchema,
+  WithRequiredParamSchema,
+  UpdateBookFormSchema,
+} from '@/schemas/books.js';
+import { ResourceCollectionQuerySchema } from '@/schemas/common.js';
+import { FastifyTypebox } from '@/types/index.js';
 
 const books = async (server: FastifyTypebox) => {
-  server.get(
-    '/books',
-    {
-      // onRequest: [server.authenticate],
-      schema: {
-        querystring: Type.Object({
-          cursor: Type.Optional(Type.Number()),
-          size: Type.Optional(Type.Number()),
-          sort_by: Type.Optional(Type.String()),
-          sort_order: Type.Optional(Type.Enum(SortOrder)),
-        }),
-      },
-    },
-    async function (request) {
-      const {
-        cursor,
-        size = 10,
-        sort_by = 'id',
-        sort_order = SortOrder.asc,
-      } = request.query;
+  server.route({
+    method: 'GET',
+    url: '/books',
+    schema: { querystring: ResourceCollectionQuerySchema },
+    preHandler: [server.authenticate],
+    handler: handlers.getHandler,
+  });
 
-      const nextBook = cursor
-        ? await server.db.query.books.findFirst({ where: eq(table.id, cursor) })
-        : undefined;
+  server.route({
+    method: 'POST',
+    url: '/books',
+    schema: { body: CreateBookFormSchema },
+    preHandler: [server.authenticate],
+    handler: handlers.createHandler,
+  });
 
-      const orderFn = sort_order === SortOrder.desc ? desc : asc;
-      const cursorFn = sort_order === SortOrder.asc ? gt : lt;
+  server.route({
+    method: 'GET',
+    url: '/books/:id',
+    schema: { params: WithRequiredParamSchema },
+    preHandler: [server.authenticate],
+    handler: handlers.findHandler,
+  });
 
-      const data = await server.db.query.books.findMany({
-        columns: {
-          id: true,
-          title: true,
-          info: true,
-          createdAt: true,
-          updatedAt: true,
-        },
-        with: {
-          author: {
-            columns: {
-              name: true,
-              bio: true,
-            },
-          },
-          genres: {
-            columns: {
-              bookId: true,
-              genreId: true,
-            },
-            with: {
-              genre: {
-                columns: {
-                  name: true,
-                  description: true,
-                },
-              },
-            },
-          },
-        },
-        ...(cursor && {
-          where: or(
-            cursorFn(table[sort_by], nextBook?.[sort_by]),
-            and(
-              eq(table[sort_by], nextBook?.[sort_by]),
-              cursorFn(table.id, cursor),
-            ),
-          ),
-        }),
-        limit: size,
-        orderBy: orderFn(table[sort_by]),
-      });
+  server.route({
+    method: 'PUT',
+    url: '/books/:id',
+    schema: { params: WithRequiredParamSchema, body: UpdateBookFormSchema },
+    preHandler: [server.authenticate],
+    handler: handlers.updateHandler,
+  });
 
-      return {
-        data: plainToInstance(BookDto, data),
-        meta: {
-          total: await server.db.$count(table),
-          next: data.length === size ? data.at(-1)?.id : undefined,
-        },
-      };
-    },
-  );
+  server.route({
+    method: 'DELETE',
+    url: '/books/:id',
+    schema: { params: WithRequiredParamSchema },
+    // preHandler: [server.authenticate],
+    handler: handlers.deleteHandler,
+  });
 };
 
 export default books;
